# LAYMO

./: .gitignore  README.md  car.py  pyproject.toml  requirements.txt
scripts/: capture_pipeline.py
src/: camera_manager.py  car.py  line_detector.py  main.py  params.py  pid.py  start_camera.py
src/laymo/: camera_manager.py  car.py  controller.py  line_detector.py  logger.py  params.py  pid.py  visualize.py
test/: test_line_detector.py
test_images/no_light/: angle_right_kink_left_crack.npy  angle_right_straight_crack.npy  center_kink_left_crack.npy  right_straight_crack.npy
test_images/with_headlight/: angle_right_left_kink.npy  angle_right_straight.npy  center_left_kink.npy  center_straight.npy  center_straight_crack.npy
