[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "laymo"
version = "0.1.1"
authors = [{ name = "Trevor Chartier", email = "chartier.trevor@gmail.com" }]
dependencies = [
    "numpy >=1.24, <2.0",
    "opencv-python-headless >=4.11",
    "adafruit-circuitpython-servokit >=1.3.19",
    "rpi-libcamera >= 0.1a9",
    "rpi-kms >= 0.1a1",
    "picamera2 >= 0.3.25"
]